crates/milli/src/search/new/tests/snapshots/milli__search__new__tests__sort__sort-11.snap
---
source: milli/src/search/new/tests/sort.rs
expression: "format!(\"{document_scores:#?}\")"
---
[
    [
        Sort(
            Sort {
                field_name: "vague",
                ascending: false,
                redacted: false,
                value: Number(2.0),
            },
        ),
    ],
    [
        Sort(
            Sort {
                field_name: "vague",
                ascending: false,
                redacted: false,
                value: Number(1.5673),
            },
        ),
    ],
    [
        Sort(
            Sort {
                field_name: "vague",
                ascending: false,
                redacted: false,
                value: Number(1.2367),
            },
        ),
    ],
    [
        Sort(
            Sort {
                field_name: "vague",
                ascending: false,
                redacted: false,
                value: Number(1.1367),
            },
        ),
    ],
    [
        Sort(
            Sort {
                field_name: "vague",
                ascending: false,
                redacted: false,
                value: Number(1.0),
            },
        ),
    ],
    [
        Sort(
            Sort {
                field_name: "vague",
                ascending: false,
                redacted: false,
                value: Number(1.0),
            },
        ),
    ],
    [
        Sort(
            Sort {
                field_name: "vague",
                ascending: false,
                redacted: false,
                value: Number(0.0),
            },
        ),
    ],
    [
        Sort(
            Sort {
                field_name: "vague",
                ascending: false,
                redacted: false,
                value: String("true"),
            },
        ),
    ],
    [
        Sort(
            Sort {
                field_name: "vague",
                ascending: false,
                redacted: false,
                value: String("true"),
            },
        ),
    ],
    [
        Sort(
            Sort {
                field_name: "vague",
                ascending: false,
                redacted: false,
                value: String("false"),
            },
        ),
    ],
    [
        Sort(
            Sort {
                field_name: "vague",
                ascending: false,
                redacted: false,
                value: String("false"),
            },
        ),
    ],
    [
        Sort(
            Sort {
                field_name: "vague",
                ascending: false,
                redacted: false,
                value: String("1"),
            },
        ),
    ],
    [
        Sort(
            Sort {
                field_name: "vague",
                ascending: false,
                redacted: false,
                value: String("0"),
            },
        ),
    ],
    [
        Sort(
            Sort {
                field_name: "vague",
                ascending: false,
                redacted: false,
                value: Null,
            },
        ),
    ],
    [
        Sort(
            Sort {
                field_name: "vague",
                ascending: false,
                redacted: false,
                value: Null,
            },
        ),
    ],
    [
        Sort(
            Sort {
                field_name: "vague",
                ascending: false,
                redacted: false,
                value: Null,
            },
        ),
    ],
    [
        Sort(
            Sort {
                field_name: "vague",
                ascending: false,
                redacted: false,
                value: Null,
            },
        ),
    ],
    [
        Sort(
            Sort {
                field_name: "vague",
                ascending: false,
                redacted: false,
                value: Null,
            },
        ),
    ],
    [
        Sort(
            Sort {
                field_name: "vague",
                ascending: false,
                redacted: false,
                value: Null,
            },
        ),
    ],
    [
        Sort(
            Sort {
                field_name: "vague",
                ascending: false,
                redacted: false,
                value: Null,
            },
        ),
    ],
]
